# minimize

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: gaussian_fit.cpp  linear_fit.cpp
include/minimize/: bootstrap.hpp  chi2.hpp  conjugate_gradient_descent.hpp  find_minimum_on_line.hpp  fit_results.hpp  function.hpp  measurement.hpp  minimize.hpp  steepest_descent.hpp  wssr.hpp
include/minimize/detail/: bootstrap.hpp  meta.hpp  vector_math.hpp
tests/: bootstrap_test.cpp  chi2_test.cpp  common.hpp  conjugate_gradient_test.cpp  find_minimum_on_line_test.cpp  function_gradient_test.cpp  polynomial_test.cpp  steepest_descent_test.cpp  wssr_test.cpp
